# py4pd-score

./: README.deken.pd  README.md  pd-score.pd  pd-score.py  py4pd-score.py  pyproject.toml
help/: py.chord-help.pd
score/: __init__.py  chord.py
score/help/: py.chord-help.pd
src/: chord.py  pdscoreutils.py  utils.py
